<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_secondary"
                android:text="@string/address" />

            <EditText
                android:id="@+id/ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck"
                android:text="192.168.43.204"/>

            <EditText
                android:id="@+id/port"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"
                android:text="35888"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_secondary"
                android:text="@string/filter" />
            <EditText
                android:id="@+id/packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
</LinearLayout>